adding files of html and css

--- a/htmlcode.html
+++ b/htmlcode.html
@@ -12,7 +12,7 @@
 <body>
     <div class="card">
         <div class="image-box">
-            <img src="https://thumbor-production-auction.hemmings.com/820x545/2302503/side-left2.jpg">
+            <img src="./first/car1.jpg">
         </div>
         <div class="content">
             <h2>Ford Mustang 1969</h2>
